--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "@babel/polyfill": "^7.4.4",
     "antd": "^3.23.6",
     "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "snabbdom": "^0.7.3"
+    "react-dom": "^16.8.6"
   },
   "devDependencies": {
     "@babel/cli": "^7.5.5",
