--- a/package.json
+++ b/package.json
@@ -6,36 +6,47 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "scripts": "webpack",
-    "start": "webpack-dev-server --open"
+    "dev": "webpack-dev-server --open --config webpack.dev.js",
+    "build": "webpack --config webpack.prod.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@babel/plugin-proposal-class-properties": "^7.5.5",
-    "@babel/polyfill": "^7.4.4",
+    "@antv/data-set": "^0.10.2",
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/polyfill": "^7.8.7",
     "antd": "^3.23.6",
-    "fastify": "^2.11.0",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "bizcharts": "^3.5.9",
+    "dva": "^2.4.1",
+    "fastify": "^2.14.0",
+    "jquery": "^3.5.0",
+    "lodash": "^4.17.15",
+    "moment": "^2.25.1",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1"
   },
   "devDependencies": {
-    "@babel/cli": "^7.5.5",
-    "@babel/core": "^7.5.5",
-    "@babel/preset-env": "^7.5.5",
-    "@babel/preset-react": "^7.0.0",
-    "babel-eslint": "^10.0.2",
-    "babel-loader": "^8.0.6",
+    "@babel/cli": "^7.8.4",
+    "@babel/core": "^7.9.6",
+    "@babel/preset-env": "^7.9.6",
+    "@babel/preset-react": "^7.9.4",
+    "@babel/runtime": "^7.9.6",
+    "babel-eslint": "^10.1.0",
+    "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^3.0.0",
-    "css-loader": "^3.1.0",
-    "eslint": "^6.1.0",
+    "css-loader": "^3.5.3",
+    "eslint": "^6.8.0",
     "eslint-loader": "^2.2.1",
-    "eslint-plugin-react": "^7.14.3",
-    "file-loader": "^4.1.0",
+    "eslint-plugin-react": "^7.19.0",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "file-loader": "^4.3.0",
     "html-webpack-plugin": "^3.2.0",
+    "mini-css-extract-plugin": "^0.9.0",
     "style-loader": "^0.23.1",
-    "url-loader": "^2.1.0",
-    "webpack": "^4.36.1",
-    "webpack-cli": "^3.3.9",
-    "webpack-dev-server": "^3.7.2"
+    "url-loader": "^2.3.0",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.10.3",
+    "webpack-merge": "^4.2.2"
   }
 }
